--- a/Project/db/work/common_tcl.html
+++ b/Project/db/work/common_tcl.html
@@ -60,6 +60,18 @@ prj_project open "C:/Users/eidos/Desktop/verilog experiment/common/db/work/commo
 
 
 
+<A name="pn220714164128"></A><B><U><big>pn220714164128</big></U></B>
+#Start recording tcl command: 7/14/2022 16:17:27
+#Project Location: C:/Users/eidos/Desktop/verilog experiment/common/db/work; Project name: common
+prj_project open "C:/Users/eidos/Desktop/verilog experiment/common/db/work/common.ldf"
+pwc_command new
+pgr_project open "C:/Users/eidos/Desktop/verilog experiment/common/db/work/impl1/impl1.xcf"
+pgr_project close
+pwc_command exit
+#Stop recording: 7/14/2022 16:41:28
+
+
+
 <BR>
 <BR>
 <BR>
