--- a/db/work/common_tcl.html
+++ b/db/work/common_tcl.html
@@ -52,14 +52,6 @@ prj_run Translate -impl impl1
 
 
 
-<A name="pn220714161557"></A><B><U><big>pn220714161557</big></U></B>
-#Start recording tcl command: 7/14/2022 15:52:38
-#Project Location: C:/Users/eidos/Desktop/verilog experiment/common/db/work; Project name: common
-prj_project open "C:/Users/eidos/Desktop/verilog experiment/common/db/work/common.ldf"
-#Stop recording: 7/14/2022 16:15:57
-
-
-
 <A name="pn220808163441"></A><B><U><big>pn220808163441</big></U></B>
 #Start recording tcl command: 8/8/2022 10:48:09
 #Project Location: C:/Users/eidos/GitHub/CURRENT_WAV_CTRL_FPGA/db/work; Project name: common
@@ -114,6 +106,15 @@ prj_project open "C:/Users/eidos/GitHub/CURRENT_WAV_CTRL_FPGA/db/work/common.ldf
 #Project Location: C:/Users/eidos/GitHub/CURRENT_WAV_CTRL_FPGA/db/work; Project name: common
 prj_project open "C:/Users/eidos/GitHub/CURRENT_WAV_CTRL_FPGA/db/work/common.ldf"
 #Stop recording: 8/10/2022 17:24:33
+
+
+
+<A name="pn220811150511"></A><B><U><big>pn220811150511</big></U></B>
+#Start recording tcl command: 8/11/2022 09:25:18
+#Project Location: C:/Users/eidos/GitHub/CURRENT_WAV_CTRL_FPGA/db/work; Project name: common
+prj_project open "C:/Users/eidos/GitHub/CURRENT_WAV_CTRL_FPGA/db/work/common.ldf"
+prj_run Export -impl impl1
+#Stop recording: 8/11/2022 15:05:11
 
 
 
