--- a/db/work/impl1/syntmp/common_impl1_toc.htm
+++ b/db/work/impl1/syntmp/common_impl1_toc.htm
@@ -12,13 +12,25 @@
 
 <li style="font-size:12; font-style:normal"><b style="background-color:#a2bff0; font-weight:bold">Synthesis -  </b> 
 <ul rel="open">
-<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#error3" target="srrFrame" title="">Error in report!</a>  </li>
 <li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#compilerReport1" target="srrFrame" title="">Compiler Report</a>  </li>
-<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\common_impl1_cck.rpt" target="srrFrame" title="">Constraint Checker Report (14:15 08-Aug)</a>  </li></ul></li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#compilerReport3" target="srrFrame" title="">Compiler Constraint Applicator</a>  </li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#mapperReport5" target="srrFrame" title="">Pre-mapping Report</a>  
+<ul rel="open" >
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#mapperReport6" target="srrFrame" title="">Clock Summary</a>  </li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#clockReport7" target="srrFrame" title="">Clock Conversion</a>  </li></ul></li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#mapperReport8" target="srrFrame" title="">Mapper Report</a>  
+<ul rel="open" >
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#timingReport9" target="srrFrame" title="">Timing Report</a>  
+<ul rel="open" >
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#performanceSummary10" target="srrFrame" title="">Performance Summary</a>  </li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#clockRelationships11" target="srrFrame" title="">Clock Relationships</a>  </li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#interfaceInfo12" target="srrFrame" title="">Interface Information</a>  </li></ul></li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\syntmp\common_impl1_srr.htm#resourceUsage13" target="srrFrame" title="">Resource Utilization</a>  </li></ul></li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\common_impl1_cck.rpt" target="srrFrame" title="">Constraint Checker Report (15:29 11-Aug)</a>  </li></ul></li>
 <li style="font-size:12; font-style:normal"><b style="background-color:#a2bff0; font-weight:bold">Place and Route -  </b> 
 <ul rel="open">
-<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\common_impl1.twr" target="srrFrame" title="">Timing Report (14:15 08-Aug)</a>  </li></ul></li>
-<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\stdout.log" target="srrFrame" title="">Session Log (11:47 11-Aug)</a>  
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\common_impl1.twr" target="srrFrame" title="">Timing Report (14:51 11-Aug)</a>  </li></ul></li>
+<li><a href="file:///C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\stdout.log" target="srrFrame" title="">Session Log (15:29 11-Aug)</a>  
 <ul  ></ul></li>         </ul>
         </li>
    </ul>
