--- a/db/work/impl1/syntmp/statusReport.html
+++ b/db/work/impl1/syntmp/statusReport.html
@@ -33,39 +33,41 @@
  			<th align="left">Date/Time</th>
          </tr>
   <tr>
-  <td class="optionTitle"> (compiler)</td><td>Error</td>
- <td>9</td>
- <td>42</td>
- <td style="background-color:#FFBBBB;">7</td>
+  <td class="optionTitle"> (compiler)</td><td>Complete</td>
+ <td>10</td>
+ <td>46</td>
+<td>0</td>
 <td>-</td>
-<td>00m:01s</td>
+<td>00m:02s</td>
 <td>-</td>
-<td><font size="-1">2022-08-11</font><br/><font size="-2">오전 11:47:18</font></td>
+<td><font size="-1">2022-08-11</font><br/><font size="-2">오후 3:29:25</font></td>
 </tr> 
 
  <tr>
   <td class="optionTitle"> (premap)</td><td>Complete</td>
  <td>5</td>
- <td>10</td>
+ <td>11</td>
 <td>0</td>
 <td>0m:01s</td>
 <td>0m:01s</td>
 <td>175MB</td>
-<td><font size="-1">2022-08-08</font><br/><font size="-2">오후 2:15:07</font></td>
+<td><font size="-1">2022-08-11</font><br/><font size="-2">오후 3:29:28</font></td>
 </tr> 
 
  <tr>
   <td class="optionTitle"> (fpga_mapper)</td><td>Complete</td>
- <td>12</td>
+ <td>9</td>
  <td>8</td>
 <td>0</td>
 <td>0m:02s</td>
 <td>0m:02s</td>
-<td>186MB</td>
-<td><font size="-1">2022-08-08</font><br/><font size="-2">오후 2:15:10</font></td>
+<td>181MB</td>
+<td><font size="-1">2022-08-11</font><br/><font size="-2">오후 3:29:30</font></td>
 </tr> 
 
- 		</tbody>
+<tr>
+  <td class="optionTitle">Multi-srs Generator</td>
+  <td>Complete</td><td class="empty"></td><td class="empty"></td><td class="empty"></td><td></td><td class="empty"></td><td class="empty"></td><td><font size="-1">2022-08-11</font><br/><font size="-2">오후 3:29:26</font></td> 		</tbody>
      </table>
  <br> 
  <table width="100%" border="1" cellspacing= "0" cellpadding= "0" >
@@ -73,8 +75,8 @@
 <tfoot> <tr> <td class="optionTitle" colspan="4"></td></tr> 
  </tfoot> 
  <tbody> <tr> 
-<td title ="Total Register bits used" class="optionTitle" align="left">Register bits</td> <td>91</td>
-<td title ="Total I/O cells used" class="optionTitle" align="left">I/O cells</td> <td>42</td>
+<td title ="Total Register bits used" class="optionTitle" align="left">Register bits</td> <td>1</td>
+<td title ="Total I/O cells used" class="optionTitle" align="left">I/O cells</td> <td>32</td>
 </tr>
 <tr> 
 <td title ="Total Block RAMs used" class="optionTitle" align="left">Block RAMs
@@ -84,7 +86,7 @@
 </tr>
 <tr> 
 <td title ="Total ORCA LUTs used" class="optionTitle" align="left">ORCA LUTs
-(total_luts)</td> <td>76</td>
+(total_luts)</td> <td>0</td>
 <td class="optionTitle"></td><td></td></tr> 
 </tbody>
     </table><br>
@@ -94,7 +96,7 @@
  </tfoot> 
 <tbody> 
    <tr><th class="optionTitle" align= "left ">Clock Name</th><th class="optionTitle" align= "left ">Req Freq</th><th class="optionTitle" align= "left ">Est Freq</th><th class="optionTitle" align= "left ">Slack</th></tr> 
-<tr> <td  align="left">rootClk</td><td  align="left">4.0 MHz</td><td  align="left">68.3 MHz</td><td  align="left">235.367</td></tr> 
+<tr> <td  align="left">rootClk</td><td  align="left">4.0 MHz</td><td  align="left">NA</td><td  align="left">NA</td></tr> 
 <tr> <td  align="left">System</td><td  align="left">100.0 MHz</td><td  align="left">NA</td><td  align="left">NA</td></tr> 
 </tbody> 
  </table>
